# Toy-Assembly

./: CMakeLists.txt  Makefile  README.md  aritmeticas.c  control.c  control.h  leitura.c  leitura.h  logica.c  logica.h  main.c  memoria.c  saida.c  saida.h
include/: aritmeticas.h  memoria.h  saida.h
src/: aritmeticas.c  control.c  leitura.c  logica.c  main.c  memoria.c  saida.c
